--- a/DCB Notebook.ipynb
+++ b/DCB Notebook.ipynb
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1000,13 +1000,18 @@
       "Compared pics: [28, 139], loss: 1.151105284690857\n",
       "Compared pics: [29, 65], loss: 1.1455246210098267\n",
       "Compared pics: [29, 139], loss: 1.1475427150726318\n",
-      "Compared pics: [65, 139], loss: 1.1631560325622559\n"
+      "Compared pics: [65, 139], loss: 1.1631560325622559\n",
+      "Losses avg: 1.1500613689422607\n"
      ]
     }
    ],
    "source": [
+    "losses = []\n",
     "for ids in similar_ids:\n",
-    "    print(f'Compared pics: {ids}, loss: {comparison_loss(example_data.data[0], model, loss, ids)}')"
+    "    l = comparison_loss(example_data.data[0], model, loss, ids)\n",
+    "    losses.append(l)\n",
+    "    print(f'Compared pics: {ids}, loss: {l}')\n",
+    "print(f'Losses avg: {sum(losses)/len(losses)}')"
    ]
   },
   {
@@ -1035,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1047,13 +1052,18 @@
       "Compared pics: [2, 52], loss: 1.324397087097168\n",
       "Compared pics: [28, 53], loss: 1.279703140258789\n",
       "Compared pics: [28, 52], loss: 1.300695776939392\n",
-      "Compared pics: [52, 53], loss: 1.2922512292861938\n"
+      "Compared pics: [52, 53], loss: 1.2922512292861938\n",
+      "Losses avg: 1.3220716714859009\n"
      ]
     }
    ],
    "source": [
+    "losses = []\n",
     "for ids in non_similar_ids:\n",
-    "    print(f'Compared pics: {ids}, loss: {comparison_loss(example_data.data[0], model, loss, ids)}')"
+    "    l = comparison_loss(example_data.data[0], model, loss, ids)\n",
+    "    losses.append(l)\n",
+    "    print(f'Compared pics: {ids}, loss: {l}')\n",
+    "print(f'Losses avg: {sum(losses)/len(losses)}')"
    ]
   },
   {
