move resnet50 analysis to analysis folder

--- a/analysis_notebooks/ResNet50_Analysis.ipynb
+++ b/analysis_notebooks/ResNet50_Analysis.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "fantastic-lyric",
    "metadata": {
     "scrolled": false
    },
@@ -53,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "cross-vienna",
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "forty-siemens",
    "metadata": {
     "scrolled": true
    },
@@ -111,6 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "intense-summer",
    "metadata": {
     "scrolled": true
    },
@@ -140,6 +144,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "answering-chancellor",
    "metadata": {},
    "source": [
     "### Clustering and PCA of the Random SimCLR model"
@@ -148,6 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "gross-belize",
    "metadata": {
     "scrolled": true
    },
@@ -169,6 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "unlikely-helicopter",
    "metadata": {
     "scrolled": true
    },
@@ -184,6 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "former-continent",
    "metadata": {
     "scrolled": true
    },
@@ -195,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "bacterial-mustang",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "organic-coating",
    "metadata": {
     "scrolled": true
    },
@@ -267,6 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "cardiac-gamma",
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +304,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "continuing-measurement",
    "metadata": {},
    "source": [
     "### Loss statistics for epochs 100-200"
@@ -301,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
+   "id": "running-middle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
+   "id": "thrown-belize",
    "metadata": {
     "scrolled": true
    },
@@ -333,6 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
+   "id": "listed-dressing",
    "metadata": {
     "scrolled": true
    },
@@ -350,6 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
+   "id": "plastic-services",
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
+   "id": "russian-whale",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -398,6 +415,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "tracked-factor",
    "metadata": {},
    "source": [
     "I took the old loss data for resnet18. As can be seen from the plot, after drop_last was set to True, the drops in the end of each epoch disappeared."
@@ -406,6 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
+   "id": "restricted-alaska",
    "metadata": {
     "scrolled": true
    },
@@ -430,6 +449,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "frank-upper",
    "metadata": {},
    "source": [
     "### Plotting images from trainloader"
@@ -438,6 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "chubby-horizon",
    "metadata": {},
    "outputs": [
     {
@@ -459,6 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "automotive-circular",
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fantastic-renewal",
    "metadata": {},
    "outputs": [],
    "source": []
