--- a/RotNetAnalysis2.ipynb
+++ b/RotNetAnalysis2.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-flavor",
+   "id": "antique-niger",
    "metadata": {},
    "source": [
     "RotNet model has \"Network in Network\" structure, which means it consists of multiple \"smaller\" convolutional networks. Each convolutional block returns different features. I have tried to perform kmeans on each of the block, and 2d block showed the best results, so I took it's features for later IDEC training.\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "potential-wrapping",
+   "id": "played-bidder",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "composed-vegetable",
+   "id": "lesser-mention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "polished-divide",
+   "id": "religious-performer",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intimate-avenue",
+   "id": "considered-smell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "prepared-child",
+   "id": "numerical-bread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raising-thong",
+   "id": "interim-direction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "lovely-grenada",
+   "id": "technical-administrator",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "digital-fourth",
+   "id": "cordless-basket",
    "metadata": {},
    "source": [
     "I feel like classification results here rely on kmeans and pca run heavily. Sometimes IDEC with 30 epochs looks better than 60 epochs, sometimes worse, depending on the kmeans and pca runs. If one looks at the separate classes plots, it is seen that training with IDEC haven't brought anything. Is it possible that the reason is that I shouldn't use convolutional network output directly? Or it should be fine if kmeans on pretrained data embedded with flattening achieves 30%, and I just made some mistake here? I am not sure about IDEC training because of the specific network training and would like to discuss it on Friday in detail.\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "mysterious-playing",
+   "id": "changed-circulation",
    "metadata": {},
    "outputs": [
     {
@@ -626,12 +626,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "sonic-upper",
+   "cell_type": "markdown",
+   "id": "weekly-rebate",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Notes for Friday discussion:\n",
+    "- cluster initialization\n",
+    "- using output of the 2d layer while continuing training\n",
+    "- train labels and clustering labels are different (fake rot"
+   ]
   }
  ],
  "metadata": {
