--- a/Rot Vis.ipynb
+++ b/Rot Vis.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "conceptual-lancaster",
    "metadata": {
     "scrolled": false
    },
@@ -56,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "written-thesaurus",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "contemporary-projection",
    "metadata": {
     "scrolled": true
    },
@@ -116,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "legitimate-comfort",
    "metadata": {
     "scrolled": true
    },
@@ -146,7 +142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wanted-passion",
    "metadata": {},
    "source": [
     "### Clustering and PCA of the pretrained RotNet model"
@@ -155,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "directed-research",
    "metadata": {
     "scrolled": true
    },
@@ -180,7 +174,6 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "opposite-occasions",
    "metadata": {
     "scrolled": true
    },
@@ -196,7 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "confident-transport",
    "metadata": {
     "scrolled": true
    },
@@ -208,7 +200,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "substantial-insurance",
    "metadata": {
     "scrolled": true
    },
@@ -235,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "local-guyana",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +264,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acting-paris",
    "metadata": {},
    "source": [
     "RotNet model has \"Network in Network\" structure, which means it consists of multiple \"smaller\" convolutional networks. Each convolutional block returns different features. I have tried to perform kmeans on each of the block, and 2d block showed the best results, so I took it's features for later IDEC training.\n",
@@ -283,9 +272,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing activations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "greatest-charm",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "oriental-kruger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "accredited-impact",
    "metadata": {},
    "outputs": [
     {
@@ -427,46 +420,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "static-george",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def train_model(model, batch_size, learning_rate, epochs, data, train, device):\n",
-    "    print(f\"Training {model.name} started...\")\n",
-    "    model.to(device)\n",
-    "\n",
-    "    # paths to save/load models from\n",
-    "    base_path = \"trained_models\"\n",
-    "    pretrained_model_name = f\"pretrained_{model.name}.pth\"\n",
-    "    pretrained_model_path = os.path.join(base_path, pretrained_model_name)\n",
-    "\n",
-    "    # training\n",
-    "    if train:\n",
-    "        # data_limit = int(len(data) * data_percent)\n",
-    "        # print(f\"Number of train images: {data_limit}\")\n",
-    "        print(f\"Number of train images: {len(data)}\")\n",
-    "\n",
-    "        # trainloader = torch.utils.data.DataLoader(data[:data_limit],\n",
-    "        trainloader = torch.utils.data.DataLoader(data,\n",
-    "                                                  batch_size=batch_size,\n",
-    "                                                  shuffle=True,\n",
-    "                                                  drop_last=True)\n",
-    "\n",
-    "        model = model.fit(trainloader=trainloader, epochs=epochs, start_lr=learning_rate, device=device, model_path=pretrained_model_path)\n",
-    "        torch.save(model.state_dict(), pretrained_model_path)\n",
-    "    else:\n",
-    "        state_dict = torch.load(pretrained_model_path, map_location=device)\n",
-    "        model.load_state_dict(state_dict)\n",
-    "\n",
-    "    return model"
+    "### RotNet IDEC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "broadband-fiction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +441,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "funny-portuguese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +470,6 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "democratic-tyler",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +496,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "induced-packing",
    "metadata": {},
    "source": [
     "I feel like classification results here rely on kmeans and pca run heavily. Sometimes IDEC with 30 epochs looks better than 60 epochs, sometimes worse, depending on the kmeans and pca runs. If one looks at the separate classes plots, it is seen that training with IDEC haven't brought anything. Is it possible that the reason is that I shouldn't use convolutional network output directly? Or it should be fine if kmeans on pretrained data embedded with flattening achieves 30%, and I just made some mistake here? I am not sure about IDEC training because of the specific network training and would like to discuss it on Friday in detail.\n",
@@ -547,7 +506,6 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "italic-country",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +585,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-facing",
    "metadata": {},
    "source": [
     "Notes for Friday discussion:\n",
@@ -639,7 +596,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustained-sudan",
    "metadata": {},
    "outputs": [],
    "source": []
