--- a/Final.ipynb
+++ b/Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "corporate-sherman",
    "metadata": {
     "scrolled": false
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "palestinian-harris",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "conceptual-stretch",
    "metadata": {
     "scrolled": true
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "sonic-operation",
    "metadata": {
     "scrolled": true
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "industrial-accordance",
    "metadata": {
     "scrolled": true
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "manufactured-sleep",
    "metadata": {
     "scrolled": true
@@ -204,19 +204,270 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "recovered-conservative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_nmis_and_cas_10_runs_1_model(model_name, colors_classes, device):\n",
+    "    print(model_name)\n",
+    "\n",
+    "    model = load_model(model_name, device, torch.rand(size=(4, 12288)))\n",
+    "    nmis = []\n",
+    "    cas = []\n",
+    "\n",
+    "    for k in range(5):\n",
+    "        labels, kmeans, nmi, _, _ = compute_nmi_and_pca(model, model_name, colors_classes, device, testloader)\n",
+    "        nmis.append(nmi)\n",
+    "\n",
+    "        ca = cluster_accuracy(labels, kmeans.labels_)\n",
+    "        cas.append(ca)\n",
+    "        print(f'Run: {k}\\n{model_name}:\\nNMI:{nmi}\\nCA:{ca}\\n')\n",
+    "        del labels\n",
+    "        del kmeans\n",
+    "    return nmis, cas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "liquid-output",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_total_mean_and_var(metrics_name, df):\n",
     "    models_means = df.mean()\n",
-    "    models_stds = df.std()\n",
     "\n",
     "    total_mean = models_means.mean()\n",
-    "    total_std = models_stds.std()\n",
+    "    total_std = models_means.std()\n",
     "    \n",
     "    print(f'{metrics_name} mean: {total_mean:.4f}')\n",
     "    print(f'{metrics_name} variance: {total_std:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sticky-adjustment",
+   "metadata": {},
+   "source": [
+    "## Overall comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "blind-uncertainty",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmi_all = pd.read_csv('trained_models/nmis_all.csv', index_col=0, header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "brilliant-electron",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca_all = pd.read_csv('trained_models/cas_all.csv', index_col=0, header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "english-bumper",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CIFAR NMI</th>\n",
+       "      <th>CIFAR NMI VAR</th>\n",
+       "      <th>STL10 NMI</th>\n",
+       "      <th>STL10 NMI VAR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RotNet</th>\n",
+       "      <td>0.3506</td>\n",
+       "      <td>0.0017</td>\n",
+       "      <td>0.3357</td>\n",
+       "      <td>0.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RotNet + DEC</th>\n",
+       "      <td>0.1042</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR</th>\n",
+       "      <td>0.4724</td>\n",
+       "      <td>0.0033</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR + 100</th>\n",
+       "      <td>0.4924</td>\n",
+       "      <td>0.0033</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR + IDEC</th>\n",
+       "      <td>0.5569</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                CIFAR NMI   CIFAR NMI VAR   STL10 NMI   STL10 NMI VAR\n",
+       "Model                                                                \n",
+       "RotNet             0.3506          0.0017      0.3357          0.0032\n",
+       "RotNet + DEC       0.1042          0.0001      0.0000          0.0000\n",
+       "SimCLR             0.4724          0.0033      0.0000          0.0000\n",
+       "SimCLR + 100       0.4924          0.0033      0.0000          0.0000\n",
+       "SimCLR + IDEC      0.5569          0.0001      0.0000          0.0000"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nmi_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "latter-vampire",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CIFAR CA</th>\n",
+       "      <th>CIFAR CA VAR</th>\n",
+       "      <th>STL10 CA</th>\n",
+       "      <th>STL10 CA VAR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RotNet</th>\n",
+       "      <td>0.4357</td>\n",
+       "      <td>0.0051</td>\n",
+       "      <td>0.3641</td>\n",
+       "      <td>0.0076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RotNet + DEC</th>\n",
+       "      <td>0.2065</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR</th>\n",
+       "      <td>0.5904</td>\n",
+       "      <td>0.0090</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR + 100</th>\n",
+       "      <td>0.5815</td>\n",
+       "      <td>0.0017</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SimCLR + IDEC</th>\n",
+       "      <td>0.6576</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                CIFAR CA   CIFAR CA VAR   STL10 CA   STL10 CA VAR\n",
+       "Model                                                            \n",
+       "RotNet            0.4357         0.0051     0.3641         0.0076\n",
+       "RotNet + DEC      0.2065         0.0002     0.0000         0.0000\n",
+       "SimCLR            0.5904         0.0090     0.0000         0.0000\n",
+       "SimCLR + 100      0.5815         0.0017     0.0000         0.0000\n",
+       "SimCLR + IDEC     0.6576         0.0000     0.0000         0.0000"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_all"
    ]
   },
   {
@@ -693,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 48,
    "id": "waiting-reverse",
    "metadata": {},
    "outputs": [],
@@ -744,13 +995,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 49,
    "id": "heavy-geneva",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_simclr_nmis_cifar = pd.read_csv(path_nmis, index_col=0)\n",
     "df_simclr_cas_cifar = pd.read_csv(path_cas, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "composite-india",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Run 0</th>\n",
+       "      <th>Run 1</th>\n",
+       "      <th>Run 2</th>\n",
+       "      <th>Run 3</th>\n",
+       "      <th>Run 4</th>\n",
+       "      <th>Run 5</th>\n",
+       "      <th>Run 6</th>\n",
+       "      <th>Run 7</th>\n",
+       "      <th>Run 8</th>\n",
+       "      <th>Run 9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.610377</td>\n",
+       "      <td>0.610978</td>\n",
+       "      <td>0.588642</td>\n",
+       "      <td>0.563502</td>\n",
+       "      <td>0.599459</td>\n",
+       "      <td>0.597356</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.566907</td>\n",
+       "      <td>0.622796</td>\n",
+       "      <td>0.562200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.609776</td>\n",
+       "      <td>0.634415</td>\n",
+       "      <td>0.587340</td>\n",
+       "      <td>0.556090</td>\n",
+       "      <td>0.599259</td>\n",
+       "      <td>0.595653</td>\n",
+       "      <td>0.624099</td>\n",
+       "      <td>0.568710</td>\n",
+       "      <td>0.576623</td>\n",
+       "      <td>0.558994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.608774</td>\n",
+       "      <td>0.634615</td>\n",
+       "      <td>0.590845</td>\n",
+       "      <td>0.558193</td>\n",
+       "      <td>0.603866</td>\n",
+       "      <td>0.596955</td>\n",
+       "      <td>0.626502</td>\n",
+       "      <td>0.557893</td>\n",
+       "      <td>0.554487</td>\n",
+       "      <td>0.563001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.610777</td>\n",
+       "      <td>0.634615</td>\n",
+       "      <td>0.591947</td>\n",
+       "      <td>0.561398</td>\n",
+       "      <td>0.596855</td>\n",
+       "      <td>0.593249</td>\n",
+       "      <td>0.623297</td>\n",
+       "      <td>0.566506</td>\n",
+       "      <td>0.578325</td>\n",
+       "      <td>0.555489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.611078</td>\n",
+       "      <td>0.639022</td>\n",
+       "      <td>0.589643</td>\n",
+       "      <td>0.558894</td>\n",
+       "      <td>0.599359</td>\n",
+       "      <td>0.591647</td>\n",
+       "      <td>0.620693</td>\n",
+       "      <td>0.561799</td>\n",
+       "      <td>0.573818</td>\n",
+       "      <td>0.557091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.611378</td>\n",
+       "      <td>0.633514</td>\n",
+       "      <td>0.589042</td>\n",
+       "      <td>0.559195</td>\n",
+       "      <td>0.593850</td>\n",
+       "      <td>0.597556</td>\n",
+       "      <td>0.619191</td>\n",
+       "      <td>0.562600</td>\n",
+       "      <td>0.580629</td>\n",
+       "      <td>0.567808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.606871</td>\n",
+       "      <td>0.606971</td>\n",
+       "      <td>0.492688</td>\n",
+       "      <td>0.584034</td>\n",
+       "      <td>0.592849</td>\n",
+       "      <td>0.592548</td>\n",
+       "      <td>0.616286</td>\n",
+       "      <td>0.561098</td>\n",
+       "      <td>0.585036</td>\n",
+       "      <td>0.593850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.606470</td>\n",
+       "      <td>0.636218</td>\n",
+       "      <td>0.583333</td>\n",
+       "      <td>0.555389</td>\n",
+       "      <td>0.586939</td>\n",
+       "      <td>0.595353</td>\n",
+       "      <td>0.625100</td>\n",
+       "      <td>0.554788</td>\n",
+       "      <td>0.577123</td>\n",
+       "      <td>0.565905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.607672</td>\n",
+       "      <td>0.604167</td>\n",
+       "      <td>0.588642</td>\n",
+       "      <td>0.553285</td>\n",
+       "      <td>0.593650</td>\n",
+       "      <td>0.588041</td>\n",
+       "      <td>0.624399</td>\n",
+       "      <td>0.588942</td>\n",
+       "      <td>0.578425</td>\n",
+       "      <td>0.568309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.610276</td>\n",
+       "      <td>0.638522</td>\n",
+       "      <td>0.581430</td>\n",
+       "      <td>0.562400</td>\n",
+       "      <td>0.592949</td>\n",
+       "      <td>0.589744</td>\n",
+       "      <td>0.623898</td>\n",
+       "      <td>0.557792</td>\n",
+       "      <td>0.621294</td>\n",
+       "      <td>0.560096</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Run 0     Run 1     Run 2     Run 3     Run 4     Run 5     Run 6  \\\n",
+       "0  0.610377  0.610978  0.588642  0.563502  0.599459  0.597356  0.625000   \n",
+       "1  0.609776  0.634415  0.587340  0.556090  0.599259  0.595653  0.624099   \n",
+       "2  0.608774  0.634615  0.590845  0.558193  0.603866  0.596955  0.626502   \n",
+       "3  0.610777  0.634615  0.591947  0.561398  0.596855  0.593249  0.623297   \n",
+       "4  0.611078  0.639022  0.589643  0.558894  0.599359  0.591647  0.620693   \n",
+       "5  0.611378  0.633514  0.589042  0.559195  0.593850  0.597556  0.619191   \n",
+       "6  0.606871  0.606971  0.492688  0.584034  0.592849  0.592548  0.616286   \n",
+       "7  0.606470  0.636218  0.583333  0.555389  0.586939  0.595353  0.625100   \n",
+       "8  0.607672  0.604167  0.588642  0.553285  0.593650  0.588041  0.624399   \n",
+       "9  0.610276  0.638522  0.581430  0.562400  0.592949  0.589744  0.623898   \n",
+       "\n",
+       "      Run 7     Run 8     Run 9  \n",
+       "0  0.566907  0.622796  0.562200  \n",
+       "1  0.568710  0.576623  0.558994  \n",
+       "2  0.557893  0.554487  0.563001  \n",
+       "3  0.566506  0.578325  0.555489  \n",
+       "4  0.561799  0.573818  0.557091  \n",
+       "5  0.562600  0.580629  0.567808  \n",
+       "6  0.561098  0.585036  0.593850  \n",
+       "7  0.554788  0.577123  0.565905  \n",
+       "8  0.588942  0.578425  0.568309  \n",
+       "9  0.557792  0.621294  0.560096  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_simclr_cas_cifar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "forty-image",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5903635817307691"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_simclr_cas_cifar.mean().std()"
    ]
   },
   {
@@ -822,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 55,
    "id": "demographic-refund",
    "metadata": {},
    "outputs": [],
@@ -873,13 +1354,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 56,
    "id": "neither-ontario",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_simclr_nmis_cifar_idec = pd.read_csv(path_nmis, index_col=0)\n",
     "df_simclr_cas_cifar_idec = pd.read_csv(path_cas, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "assumed-destiny",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04796861744598033"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_simclr_cas_cifar_idec.mean().std()"
    ]
   },
   {
