generate final tables

--- a/Final - Copy.ipynb
+++ b/Final - Copy.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "theoretical-manufacturer",
    "metadata": {},
    "outputs": [],
@@ -208,42 +208,160 @@
     "    \n",
     "    testloader = cifar_testloader if 'CIFAR' in dataset else stl10_testloader\n",
     "\n",
-    "    for i in range(10):\n",
-    "        name = f'{model_name}_{i}.pth'\n",
-    "        print(name)\n",
-    "        \n",
-    "        model = load_model(name, device, torch.rand(size=(4, 12288)))\n",
-    "        nmis[i] = []\n",
-    "        cas[i] = []\n",
+    "#     for i in range(10):\n",
+    "    name = f'{model_name}.pth'\n",
+    "    print(name)\n",
     "\n",
-    "        for k in range(10):\n",
-    "            labels, kmeans, nmi, _, _ = compute_nmi_and_pca(model, name, colors_classes, device, testloader)\n",
-    "            nmis[i].append(nmi)\n",
+    "    model = load_model(name, device, torch.rand(size=(4, 12288)))\n",
+    "    nmis = []\n",
+    "    cas = []\n",
     "\n",
-    "            ca = cluster_accuracy(labels, kmeans.labels_)\n",
-    "            cas[i].append(ca)\n",
-    "            print(f'Run: {k}\\n{name}:\\nNMI:{nmi}\\nCA:{ca}\\n')\n",
-    "            del labels\n",
-    "            del kmeans\n",
+    "    for k in range(10):\n",
+    "        labels, kmeans, nmi, _, _ = compute_nmi_and_pca(model, name, colors_classes, device, testloader)\n",
+    "        nmis.append(nmi)\n",
+    "\n",
+    "        ca = cluster_accuracy(labels, kmeans.labels_)\n",
+    "        cas.append(ca)\n",
+    "        print(f'Run: {k}\\n{name}:\\nNMI:{nmi}\\nCA:{ca}\\n')\n",
+    "        del labels\n",
+    "        del kmeans\n",
     "    return nmis, cas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "liquid-output",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_total_mean_and_var(metrics_name, df):\n",
     "    models_means = df.mean()\n",
-    "    models_stds = df.std()\n",
     "\n",
     "    total_mean = models_means.mean()\n",
-    "    total_std = models_stds.std()\n",
+    "    total_std = models_means.std()\n",
     "    \n",
     "    print(f'{metrics_name} mean: {total_mean:.4f}')\n",
     "    print(f'{metrics_name} variance: {total_std:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "defensive-atmosphere",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth\n",
+      "Run: 0\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3496955539111479\n",
+      "CA:0.40133568548387094\n",
+      "\n",
+      "Run: 1\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3542260630507306\n",
+      "CA:0.3894909274193548\n",
+      "\n",
+      "Run: 2\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3533126963783294\n",
+      "CA:0.39213709677419356\n",
+      "\n",
+      "Run: 3\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3470680826200469\n",
+      "CA:0.3915070564516129\n",
+      "\n",
+      "Run: 4\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3462946256851384\n",
+      "CA:0.3826864919354839\n",
+      "\n",
+      "Run: 5\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3487958702996605\n",
+      "CA:0.3878528225806452\n",
+      "\n",
+      "Run: 6\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.3554714494120182\n",
+      "CA:0.4012096774193548\n",
+      "\n",
+      "Run: 7\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.35182125208256376\n",
+      "CA:0.39742943548387094\n",
+      "\n",
+      "Run: 8\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.35308259112539714\n",
+      "CA:0.39251512096774194\n",
+      "\n",
+      "Run: 9\n",
+      "SimCLR\\STL10\\pretrained_SimCLR_STL10_10.pth:\n",
+      "NMI:0.35494482242438213\n",
+      "CA:0.40083165322580644\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "simclr_stl10_10_nmi, simclr_stl10_10_ca = get_nmis_and_cas_10_runs('SimCLR\\STL10\\pretrained_SimCLR_STL10_10', stl10_colors_classes, device, dataset='STL10')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "level-garlic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmi_np = np.array(simclr_stl10_10_nmi)\n",
+    "ca_np = np.array(simclr_stl10_10_ca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "intensive-slovenia",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3514713006989415\n",
+      "0.003134680486120084\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nmi_np.mean())\n",
+    "print(nmi_np.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "initial-devil",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3936995967741935\n",
+      "0.006011046953380192\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ca_np.mean())\n",
+    "print(ca_np.std())"
    ]
   },
   {
